--- a/arch/arm64/configs/mcd_defconfig
+++ b/arch/arm64/configs/mcd_defconfig
@@ -48,7 +48,7 @@ CONFIG_CROSS_COMPILE=""
 CONFIG_LOCALVERSION="-mcd"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_DEFAULT_HOSTNAME="(none)"
-CONFIG_SWAP=y
+# CONFIG_SWAP is not set
 # CONFIG_SYSVIPC is not set
 # CONFIG_POSIX_MQUEUE is not set
 CONFIG_CROSS_MEMORY_ATTACH=y
@@ -572,24 +572,16 @@ CONFIG_BOUNCE=y
 CONFIG_DEFAULT_MMAP_MIN_ADDR=4096
 # CONFIG_TRANSPARENT_HUGEPAGE is not set
 # CONFIG_CLEANCACHE is not set
-# CONFIG_FRONTSWAP is not set
 CONFIG_CMA=y
 # CONFIG_CMA_DEBUG is not set
 # CONFIG_CMA_DEBUGFS is not set
 CONFIG_CMA_AREAS=7
 # CONFIG_ZPOOL is not set
 # CONFIG_ZBUD is not set
-CONFIG_ZSMALLOC=y
-# CONFIG_PGTABLE_MAPPING is not set
-# CONFIG_ZSMALLOC_STAT is not set
-CONFIG_DIRECT_RECLAIM_FILE_PAGES_ONLY=y
-CONFIG_INCREASE_MAXIMUM_SWAPPINESS=y
-CONFIG_FIX_INACTIVE_RATIO=y
-# CONFIG_SWAP_ENABLE_READAHEAD is not set
+# CONFIG_ZSMALLOC is not set
 CONFIG_VMAP_LAZY_PURGING_FACTOR=32
 CONFIG_GENERIC_EARLY_IOREMAP=y
-# CONFIG_BALANCE_ANON_FILE_RECLAIM is not set
-CONFIG_IDLE_PAGE_TRACKING=y
+# CONFIG_IDLE_PAGE_TRACKING is not set
 # CONFIG_FORCE_ALLOC_FROM_DMA_ZONE is not set
 # CONFIG_PROCESS_RECLAIM is not set
 CONFIG_ARCH_SUPPORTS_SPECULATIVE_PAGE_FAULT=y
@@ -665,7 +657,6 @@ CONFIG_CROSS_COMPILE_ARM32=""
 CONFIG_SUSPEND=y
 CONFIG_SUSPEND_FREEZER=y
 CONFIG_SUSPEND_SKIP_SYNC=y
-# CONFIG_HIBERNATION is not set
 CONFIG_PM_SLEEP=y
 CONFIG_PM_SLEEP_SMP=y
 # CONFIG_PM_AUTOSLEEP is not set
@@ -1385,12 +1376,7 @@ CONFIG_OF_BATTERYDATA=y
 CONFIG_BLK_DEV=y
 # CONFIG_BLK_DEV_NULL_BLK is not set
 # CONFIG_BLK_DEV_PCIESSD_MTIP32XX is not set
-CONFIG_ZRAM=y
-CONFIG_ZRAM_DEF_COMP_LZ4=y
-CONFIG_ZRAM_DEF_COMP="lz4"
-CONFIG_ZRAM_DEDUP=y
-CONFIG_ZRAM_WRITEBACK=y
-CONFIG_ZRAM_MEMORY_TRACKING=y
+# CONFIG_ZRAM is not set
 # CONFIG_BLK_CPQ_CISS_DA is not set
 # CONFIG_BLK_DEV_DAC960 is not set
 # CONFIG_BLK_DEV_UMEM is not set
